--- a/_includes/mainmenu.html
+++ b/_includes/mainmenu.html
@@ -1,10 +1,10 @@
 <nav>
-				<ul>
-					<li><a href="{{site.baseurl}}/">Home</a></li>
-					<li><a href="{{site.baseurl}}/projects">Projects</a></li>
-					<li><a href="{{site.baseurl}}/publications">Publications</a></li>
-					<li><a href="{{site.baseurl}}/talks">Contributions</a></li>
-					<li><a href="{{site.baseurl}}/other-stuff">Miselaneous</a></li>
-					<li><a href="{{site.baseurl}}/blog">Blog</a></li>
-				</ul>
+	<ul>
+		<li><a href="{{site.baseurl}}/" class="{% if page.url=='/' %}current{% endif %}">Home</a></li>
+		<li><a href="{{site.baseurl}}/projects" class="{% if page.url=='/projects' %}current{% endif %}">Projects</a></li>
+		<li><a href="{{site.baseurl}}/publications" class="{% if page.url=='/publications' %}current{% endif %}">Publications</a></li>
+		<li><a href="{{site.baseurl}}/talks" class="{% if page.url=='/talks' %}current{% endif %}">Contributions</a></li>
+		<li><a href="{{site.baseurl}}/other-stuff" class="{% if page.url=='/other-stuff' %}current{% endif %}">Miselaneous</a></li>
+		<li><a href="{{site.baseurl}}/blog" class="{% if page.url=='/blog' %}current{% endif %}">Blog</a></li>
+	</ul>
 </nav>
