First version to go on-line

--- a/_includes/mainmenu.html
+++ b/_includes/mainmenu.html
@@ -1,10 +1,20 @@
 <nav>
+	{% if page.url=='/' %}
 	<ul>
-		<li><a href="{{site.baseurl}}/" class="{% if page.url=='/' %}current{% endif %}">Home</a></li>
-		<li><a href="{{site.baseurl}}/projects" class="{% if page.url=='/projects' %}current{% endif %}">Projects</a></li>
-		<li><a href="{{site.baseurl}}/publications" class="{% if page.url=='/publications' %}current{% endif %}">Publications</a></li>
-		<li><a href="{{site.baseurl}}/talks" class="{% if page.url=='/talks' %}current{% endif %}">Contributions</a></li>
-		<li><a href="{{site.baseurl}}/other-stuff" class="{% if page.url=='/other-stuff' %}current{% endif %}">Miselaneous</a></li>
-		<li><a href="{{site.baseurl}}/blog" class="{% if page.url=='/blog' %}current{% endif %}">Blog</a></li>
+		<li></li>
 	</ul>
+	<hr size="5" noshade width="80%" color="white">
+	{% else %}
+	<ul>
+			<li>
+					<a href="{{site.baseurl}}/" class="{% if page.url=='/' %}current{% endif %}">Home</a>
+			</li>
+			<li><a href="{{site.baseurl}}/projects" class="{% if page.url=='/projects.html' %}current{% endif %}">Research</a></li>
+			<li><a href="{{site.baseurl}}/codes" class="{% if page.url=='/codes.html' %}current{% endif %}">Code</a></li>
+			<li><a href="{{site.baseurl}}/publications" class="{% if page.url=='/publications.html' %}current{% endif %}">Publications</a></li>
+			<li><a href="{{site.baseurl}}/conferences" class="{% if page.url=='/conferences.html' %}current{% endif %}">Conferences</a></li>
+			<li><a href="{{site.baseurl}}/portfolio" class="{% if page.url=='/portfolio.html' %}current{% endif %}">Portfolio</a></li>
+		</ul>
+		<hr size="5" noshade width="80%">
+	{% endif %}
 </nav>
