--- a/css/main.css
+++ b/css/main.css
@@ -1,40 +1,73 @@
 body {
-    margin: 60px auto;
-    width: 70%;
+    margin: 6px auto;
+    width: 80%;
+    background-color: white; /*#ddd;*/
+    font-family: sans-serif;
+}
+nav.mainpg ul {
+  font-family: fantasy;
+  font-weight: normal;
+  display: inline;
+  list-style: circle;
+  color: black;
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family: 'Utopia', 'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
+    font-size: 1.2em;
 }
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+nav.mainmenu ul li{
+  font-family: Utopia;
+  font-weight: lighter;
+  display: inline;
+  list-style: none;
+  background-color: none;
+  color: black;
+  padding: 35px 20px 25px 20px;
+}
+
 a {
     text-decoration: none;
-    color: #999;
+    color: #777;
 }
-a:hover {
-    text-decoration: underline;
+a:hover, .container a:hover {
+    text-decoration: none;
+    color: #181818;
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Utopia', 'Arial', 'Sans-Serif';
+}
+h2 {
+  font-size: 2em;
+  font-family: fantasy;
+  font-weight: lighter;
 }
 p {
-    font-size: 1.5em;
+    font-size: 1.0em; /*font-size: 1.5em;*/
     line-height: 1.4em;
     color: #333;
+
 }
 footer {
+    padding-top: 1em;
     border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+    font-size: .6em;
+    text-align: right;
+}
+header{
+  padding: 0px;
+  text-align: center;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
+ul.posts {
+    margin: 20px auto 40px;
     font-size: 1.5em;
 }
 
@@ -43,6 +76,177 @@ ul.posts li {
 }
 
 .current {
-    background-color: #0005AA;
-    color: #999999;
+    background-color: #555;
+    color: #AAA;
+    font: 'Curier';
 }
+.container {
+  margin: 0 auto 5em auto;
+  padding: 0 4.8em 0 4.8em;
+  box-shadow: 0 0 4em #777;
+  background-color: #ccc;
+  border-radius: 9px;
+  text-align: left;
+  display: table-cell;
+  vertical-align: middle;
+  width: 90%;
+  height: 20em;
+  font-size: 1.1em;
+}
+.container a{
+  color: #DD0101;
+}
+
+#atgallery {
+  text-decoration: none;
+  color: #55A;
+  font-size: 16pt;
+  font-family: 'courier','sans-serif','helvetica';
+  font-style: normal;
+}
+
+#atgallery:hover, #caption:hover {
+    text-decoration: none;
+    color: #BB3300;
+}
+
+#caption {
+  font-family: 'utopia','sans-serif';
+  font-style: italic;
+  font-size: 12pt;
+  width: 90%;
+}
+#meinvorwort {
+   font-family: 'Utopia','Sans-Serif';
+   font-style:italic;
+   font-size: 17pt;
+   text-align:center;
+   float:left;
+   color:#3444EE;
+   width:45%;
+   padding-top:20px;
+
+}
+
+/* Icons under the Contact row at footer */
+.icons {
+  width:30px;
+  height: auto;
+  fill: #000;
+}
+
+#icon_github:hover {
+  fill: #666666; /*fill: #080707;*/
+  title: "my GitHub";
+}
+#icon_insta:hover {
+  fill: #E4405F;
+}
+#icon_twitter:hover {
+  fill: #1DA1F2;
+}
+#icon_skype:hover {
+  fill: #00AFF0;
+}
+#icon_facebook:hover {
+  fill: #3B5998;
+}
+#icon_email:hover {
+  fill: #909100;
+}
+#icon_rgate:hover {
+  fill: #00D1AF;
+}
+#icon_linkedin:hover {
+  fill: #0077B5;
+}
+/*youTube #CD201F, LinkedIn #0077B5, PayPal #00457C, Jekyll #CC0000 */
+
+/* MAIN PAGE MENU BUTTONS */
+.fa {
+  padding: 40px 10px 40px 10px;
+  font-size: 30px;
+  width: 150px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 15%;
+  transition-duration: 0.2s;
+}
+.fa:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+}
+.fa span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+.fa:hover span {
+  padding-right: 33px;
+}
+.fa:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+.fa-science {
+  background: #334d4d;
+  color: white;
+  font-family: Hermetic;
+  font-weight: 100;
+}
+.fa-science span:after {
+  content: "?";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+.fa-coding {
+  background: #1a1a1a;
+  color: #e68a00;
+  font-family: monospace;
+  font-weight: normal;
+}
+.fa-coding span:after {
+  content: "++";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+.fa-portfolio {
+  background: #668cff;
+  font-family: Utopia;
+  font-style: italic;
+  font-size: 30px;
+  color: black;
+}
+.fa-portfolio span:after {
+  content: "...";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+.fa-about {
+  background: #00586d;
+  font-family: courier;
+  color: yellow;
+  font-weight: bolder;
+}
+.fa-about span:after {
+  content: " me";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -2px;
+  transition: 0.5s;
+}
+
+/* FLAGS */
+.germany {
+  background: linear-gradient(to bottom, black calc(100% / 3), #DD0000 calc(100% / 3), #DD0000 calc(100% / 3 * 2), #FFCE00 calc(100% / 3 * 2)); }
