Font size adjusted to viewwidth and h2 font type family added

--- a/_layouts/withcaratula.html
+++ b/_layouts/withcaratula.html
@@ -5,7 +5,7 @@ layout: default
 <p id="meinvorwort">{{ page.vorworte }}</p>
 <p style="text-align:right;">
   {% if page.caratula %}
-    <img src="{{site.baseurl}}/{{ page.caratula }}" alt="{{ page.title }}" width="310px" height="auto">
+    <img src="{{site.baseurl}}/{{ page.caratula }}" alt="{{ page.title }}" width="30%" height="auto">
     {% else %}
     <h3>{{ page.title }}</h3>
   {% endif %}
