--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ h1 {
 }
 h2 {
   font-size: 2em;
-  font-family: fantasy;
+  font-family: 'fantasy','Bookman','Palatino';
   font-weight: lighter;
 }
 p {
@@ -91,7 +91,9 @@ ul.posts li {
   vertical-align: middle;
   width: 90%;
   height: 20em;
+  font-family: 'Times','Georgia';
   font-size: 1.1em;
+  font-size: 1.4vw;
 }
 .container a{
   color: #DD0101;
@@ -120,6 +122,7 @@ ul.posts li {
    font-family: 'Utopia','Sans-Serif';
    font-style:italic;
    font-size: 17pt;
+   font-size: 1.7vw;
    text-align:center;
    float:left;
    color:#3444EE;
