IPT repository + fix contact alternative tags

--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ h1 {
 }
 h2 {
   font-size: 2em;
-  font-family: 'fantasy','Bookman','Palatino';
+  font-family: 'fantasy','Bookman','Palatino','Arial';
   font-weight: lighter;
 }
 p {
