--- a/_includes/mainfoot.html
+++ b/_includes/mainfoot.html
@@ -1,26 +1,26 @@
 {% if page.url!='/' %}<a href="{{site.baseurl}}/"><h2 style="float:left;">Back Home</h2></a>{% endif %}
  <ul>
    <li style="font-size:1.9em;" > Contact me: </li>
-    <li><a href="mailto:pablosaa@uni-bonn.de" title="Email">
+    <li><a href="mailto:pablosaa@uni-bonn.de" title="Email" alt="Email">
       {% include icons/email.svg %}
     </a></li>
-    <li><a href="https://researchgate.net/profile/Pablo_Saavedra_Garfias" title="ResearGate" target="_blank">
+    <li><a href="https://researchgate.net/profile/Pablo_Saavedra_Garfias" title="ResearGate" target="_blank" atl="RG">
       {% include icons/researchgate.svg %}
     </a></li>
-    <li><a href="https://github.com/pablosaa" title="GitHub" target="_blank">
+    <li><a href="https://github.com/pablosaa" title="GitHub" target="_blank" alt="GihHub">
       {% include icons/github.svg %}
       </a></li>
-    <li><a href="https://twitter.com/gasaapa" title="Twitter" target="_blank">
+    <li><a href="https://twitter.com/gasaapa" title="Twitter" target="_blank" alt="Twitter">
       {% include icons/twitter.svg %}
     </a></li>
-    <li><a href="https://instagram.com/pablo.saavedragarfias" title="Instagram" target="_blank">
+    <li><a href="https://instagram.com/pablo.saavedragarfias" title="Instagram" target="_blank" alt="InstG">
       {% include icons/instagram.svg %}
     </a></li>
-    <li><a href="skype:pablo.saa?userinfo" title="Skype">
+    <li><a href="skype:pablo.saa?userinfo" title="Skype" alt="Skype">
       {% include icons/skype.svg %}
     </a></li>
-    <li><a href="https://www.linkedin.com/in/pablo-saavedra-garfias-1bb47498" title="LinkedIn" target="_blank">
+    <li><a href="https://www.linkedin.com/in/pablo-saavedra-garfias-1bb47498" title="LinkedIn" target="_blank" alt="LnI">
       {% include icons/linkedin.svg %}
     </a></li>
  </ul>
-<p>Copyright 2017, Pablo Saavedra-Garfias.<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0; width:88px; height:31px;" src="{{site.baseurl}}/images/icons/by-sa.svg" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+<p>Copyright 2017, Pablo Saavedra-Garfias.<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" alt="CC License"><img alt="Creative Commons License" style="border-width:0; width:88px; height:31px;" src="{{site.baseurl}}/images/icons/by-sa.svg" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
