add menu items and journals list peer-review

--- a/_includes/mainfoot.html
+++ b/_includes/mainfoot.html
@@ -1,6 +1,6 @@
 {% if page.url!='/' %}<a href="{{site.baseurl}}/"><h2 style="float:left;">Back Home</h2></a>{% endif %}
  <ul>
-   <li style="font-size:1.9em;" > Contact me: </li>
+   <li style="font-size:1.9em;" > Contact: </li>
     <li><a href="mailto:pablosaa@uni-bonn.de" title="Email" alt="Email">
       {% include icons/email.svg %}
     </a></li>
