--- a/_includes/mainmenu.html
+++ b/_includes/mainmenu.html
@@ -9,11 +9,12 @@
 			<li>
 					<a href="{{site.baseurl}}/" class="{% if page.url=='/' %}current{% endif %}">Home</a>
 			</li>
-			<li><a href="{{site.baseurl}}/projects" class="{% if page.url=='/projects.html' %}current{% endif %}">Research</a></li>
-			<li><a href="{{site.baseurl}}/codes" class="{% if page.url=='/codes.html' %}current{% endif %}">Code</a></li>
-			<li><a href="{{site.baseurl}}/publications" class="{% if page.url=='/publications.html' %}current{% endif %}">Publications</a></li>
-			<li><a href="{{site.baseurl}}/conferences" class="{% if page.url=='/conferences.html' %}current{% endif %}">Conferences</a></li>
-			<li><a href="{{site.baseurl}}/portfolio" class="{% if page.url=='/portfolio.html' %}current{% endif %}">Portfolio</a></li>
+			<li><a href="projects" class="{% if page.url=='/projects.html' %}current{% endif %}">Research</a></li>
+			<li><a href="codes" class="{% if page.url=='/codes.html' %}current{% endif %}">Code</a></li>
+			<li><a href="publications" class="{% if page.url=='/publications.html' %}current{% endif %}">Publications</a></li>
+			<li><a href="conferences" class="{% if page.url=='/conferences.html' %}current{% endif %}">Conferences</a></li>
+			<li><a href="portfolio" class="{% if page.url=='/portfolio.html' %}current{% endif %}">Portfolio</a></li>
+			<li><a href="about" class="{% if page.url=='/about.html' %}current{% endif %}">About</a></li>
 		</ul>
 		<hr size="5" noshade width="80%">
 	{% endif %}
