--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ a {
     color: #777;
 }
 a:hover, .container a:hover {
-    text-decoration: none;
+    text-decoration: underline;
     color: #181818;
 }
 h1 {
@@ -96,7 +96,7 @@ ul.posts li {
   font-size: 1.4vw;
 }
 .container a{
-  color: #DD0101;
+  color: #00b300; /*#DD0101; */
 }
 
 #atgallery {
@@ -125,7 +125,7 @@ ul.posts li {
    font-size: 1.7vw;
    text-align:center;
    float:left;
-   color:#3444EE;
+   color:#0099FF;
    width:45%;
    padding-top:20px;
 
