1. baseurl changed from /pablosaa.github.io to / 2. {baseurl.site} removed from links, instead / or {'/../..' |relative_url}

--- a/_includes/mainfoot.html
+++ b/_includes/mainfoot.html
@@ -1,4 +1,4 @@
-{% if page.url!='/' %}<a href="{{site.baseurl}}/"><h2 style="float:left;">Back Home</h2></a>{% endif %}
+{% if page.url!='/' %}<a href="{{'/' | relative_url}}"><h2 style="float:left;">Back Home</h2></a>{% endif %}
  <ul>
    <li style="font-size:1.9em;" > Contact: </li>
     <li><a href="mailto:pablosaa@uni-bonn.de" title="Email" alt="Email">
