--- a/_layouts/mycodes.html
+++ b/_layouts/mycodes.html
@@ -10,7 +10,7 @@ layout: withcaratula
   <div style="float:left;width:30%;">
     <h3> <a alt="Link to code" href="{{site.github_username}}/{{infile.linkcode}}"> {{infile.name}} </a></h3>
     {% if infile.codelogo %}
-      <img src="{{site.baseurl}}/{{infile.codelogo}}" style="width:90%;height:auto;" >
+      <img src="{{infile.codelogo}}" style="width:90%;height:auto;" >
     {% endif %}
   </div>
   <div>
