--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/main.css">
-			<link rel="shortcut icon" type="image/x-icon" href="{{site.baseurl}}/images/icons/favicon.ico">
+			<link rel="stylesheet" type="text/css" href="css/main.css">
+			<link rel="shortcut icon" type="image/x-icon" href="images/icons/favicon.ico">
 		</head>
 		<body id="top">
 			<header>
