--- a/_layouts/mygallery.html
+++ b/_layouts/mygallery.html
@@ -15,6 +15,8 @@ title: Portfolio
         </figure>
         {% elsif abbild.tag=='video' %}
         <iframe style="float:left;width:30%;" width="95%" height="auto" src="{{abbild.bild}}" frameborder="0" allowfullscreen></iframe>
+        {% elsif abbild.tag=='embeb' %}
+        <iframe style="float:left;width:50%;" width="95%" height="auto" src="{{abbild.linkto}}" frameborder="0" allowfullscreen></iframe>
         {% endif %}
     </a>
   </center>
