--- a/_layouts/mygallery.html
+++ b/_layouts/mygallery.html
@@ -15,7 +15,7 @@ title: Portfolio
         </figure>
         {% elsif abbild.tag=='video' %}
         <iframe style="float:left;width:30%;" width="95%" height="auto" src="{{abbild.bild}}" frameborder="0" allowfullscreen></iframe>
-        {% elsif abbild.tag=='embeb' %}
+        {% elsif abbild.tag=='embed' %}
         <iframe style="float:left;width:50%;" width="95%" height="auto" src="{{abbild.linkto}}" frameborder="0" allowfullscreen>{{abbild.embed}}</iframe>
         {% endif %}
     </a>
