--- a/_layouts/mygallery.html
+++ b/_layouts/mygallery.html
@@ -17,8 +17,8 @@ title: Portfolio
         <iframe style="float:left;width:30%;" width="95%" height="auto" src="{{abbild.bild}}" frameborder="0" allowfullscreen></iframe>
         {% elsif abbild.tag=='embed' %}
 					<div align="left" style="float: left; width: 400px; height: 280px; overflow-y: scroll;">
-						<!--div class='jekyll-twitter-plugin' -->
-							<a class="twitter-timeline" data-tweet-limit="5" href="https://twitter.com/gasaapa?ref_src=twsrc%5Etfw">
+						<!--div  class="twitter-timeline" class='jekyll-twitter-plugin' -->
+							<a data-tweet-limit="5" href="https://twitter.com/gasaapa?ref_src=twsrc%5Etfw">
 								Tweets by gasaapa
 							</a>
 		  				<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
