adaptation for static site and ported to home.uni-leipzig.de

--- a/_includes/mainmenu.html
+++ b/_includes/mainmenu.html
@@ -9,12 +9,12 @@
 			<li>
 					<a href="{{'/' | relative_url}}" class="{% if page.url=='/' %}current{% endif %}">Home</a>
 			</li>
-			<li><a href="{{'projects'|relative_url}}" class="{% if page.url=='/projects.html' %}current{% endif %}">Research</a></li>
-			<li><a href="{{'codes'|relative_url}}" class="{% if page.url=='/codes.html' %}current{% endif %}">Code</a></li>
-			<li><a href="{{'publications'|relative_url}}" class="{% if page.url=='/publications.html' %}current{% endif %}">Publications</a></li>
-			<li><a href="{{'conferences'|relative_url}}" class="{% if page.url=='/conferences.html' %}current{% endif %}">Conferences</a></li>
-			<li><a href="{{'portfolio'|relative_url}}" class="{% if page.url=='/portfolio.html' %}current{% endif %}">Portfolio</a></li>
-			<li><a href="{{'about'|relative_url}}" class="{% if page.url=='/about.html' %}current{% endif %}">About</a></li>
+			<li><a href="{{'projects.html'|relative_url}}" class="{% if page.url=='/projects.html' %}current{% endif %}">Research</a></li>
+			<li><a href="{{'codes.html'|relative_url}}" class="{% if page.url=='/codes.html' %}current{% endif %}">Code</a></li>
+			<li><a href="{{'publications.html'|relative_url}}" class="{% if page.url=='/publications.html' %}current{% endif %}">Publications</a></li>
+			<li><a href="{{'conferences.html'|relative_url}}" class="{% if page.url=='/conferences.html' %}current{% endif %}">Conferences</a></li>
+			<li><a href="{{'portfolio.html'|relative_url}}" class="{% if page.url=='/portfolio.html' %}current{% endif %}">Portfolio</a></li>
+			<li><a href="{{'about.html'|relative_url}}" class="{% if page.url=='/about.html' %}current{% endif %}">About</a></li>
 		</ul>
 		<hr size="5" noshade width="80%">
 	{% endif %}
