--- a/_layouts/mygallery.html
+++ b/_layouts/mygallery.html
@@ -21,7 +21,7 @@ title: Portfolio
 		<!-- a class="twitter-timeline" data-tweet-limit="5" href="https://twitter.com/gasaapa?ref_src=twsrc%5Etfw" -->
 		Tweets by gasaapa
 		<!-- /a -->
-		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<!-- script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script -->
 		  			<!-- /div -->
 	</div>
 	<!-- div class='jekyll-twitter-plugin' align="left" style="float: left; width: 400px; height: 280px; overflow-y: scroll;">{% twitter https://twitter.com/gasaapa maxwidth=390 limit=5 %}</div> -->
