--- a/_layouts/mygallery.html
+++ b/_layouts/mygallery.html
@@ -18,13 +18,12 @@ title: Portfolio
         {% elsif abbild.tag=='embed' %}
 	<div align="left" style="float: left; width: 400px; height: 280px; overflow-y: scroll;">
 	<!--div  class="twitter-timeline" class='jekyll-twitter-plugin' -->
-		<!-- a class="twitter-timeline" data-tweet-limit="5" href="https://twitter.com/gasaapa?ref_src=twsrc%5Etfw" -->
+		<!-- a class="twitter-timeline" data-tweet-limit="5" href="https://twitter.com/gasaapa?ref_src=twsrc%5Etfw">
 		Tweets by gasaapa
-		<!-- /a -->
+		</a -->
 		<!-- script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script -->
 		  			<!-- /div -->
 	</div>
-	<!-- div class='jekyll-twitter-plugin' align="left" style="float: left; width: 400px; height: 280px; overflow-y: scroll;">{% twitter https://twitter.com/gasaapa maxwidth=390 limit=5 %}</div> -->
         {% endif %}
     </a>
   </center>
