--- a/_includes/mainfoot.html
+++ b/_includes/mainfoot.html
@@ -22,8 +22,8 @@
     <li><a href="skype:pablo.saa?userinfo" title="Skype" alt="Skype">
       {% include icons/skype.svg %}
     </a></li>
-    <li><a href="https://www.linkedin.com/in/pablo-saavedra-garfias-1bb47498" title="LinkedIn" target="_blank" alt="LnI">
+    <!-- <li><a href="https://www.linkedin.com/in/pablo-saavedra-garfias-1bb47498" title="LinkedIn" target="_blank" alt="LnI">
       {% include icons/linkedin.svg %}
-    </a></li>
+    </a></li> -->
  </ul>
 <p>Copyright 2017, Pablo Saavedra-Garfias.<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" alt="CC License"><img alt="Creative Commons License" style="border-width:0; width:88px; height:31px;" src="{{site.baseurl}}/images/icons/by-sa.svg" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
