--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="{{'css/main.css'}}">
 			<link rel="shortcut icon" type="image/x-icon" href="{{'images/icons/favicon.ico'}}">
+			<meta charset="utf-8">
 		</head>
 		<body id="top">
 			<header>
