--- a/_layouts/withcaratula.html
+++ b/_layouts/withcaratula.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 
-<p id="meinvorwort">{{ page.vorworte }}</p>
+<div id="meinvorwort">
+  {% if page.vorworte %}{{ page.vorworte }}{% else %}<h3>{{ page.title }}</h3>{% endif %}</div>
+<br/>
+{% if page.caratula %}
 <p style="text-align:right;">
-  {% if page.caratula %}
     <img src="{{ page.caratula }}" alt="{{ page.title }}" width="30%" height="auto">
-    {% else %}
-    <h3>{{ page.title }}</h3>
-  {% endif %}
 </p><br/>
-<hr />
+{% endif %}
+<hr style="clear:both;" />
 {{ content }}
 <hr />
 <a  href="#top"><img alt="Back to TOP" src="images/icons/top_arrow.png"></a>
