--- a/_includes/mainfoot.html
+++ b/_includes/mainfoot.html
@@ -7,7 +7,7 @@
     <li><a href="https://github.com/pablosaa" title="GitHub" target="_blank" alt="GihHub">
       {% include icons/github.svg %}
       </a></li>
-    <li><a href="https://twitter.com/gasaapa" title="Twitter" target="_blank" alt="Twitter">
+    <li><a href="https://twitter.com/_DunkleWolke" title="Twitter" target="_blank" alt="Twitter">
       {% include icons/twitter.svg %}
     </a></li>
     <li><a href="https://researchgate.net/profile/Pablo_Saavedra_Garfias" title="ResearGate" target="_blank" atl="RG">
