--- a/_includes/mainfoot.html
+++ b/_includes/mainfoot.html
@@ -7,7 +7,7 @@
     <li><a href="https://github.com/pablosaa" title="GitHub" target="_blank" alt="GihHub">
       {% include icons/github.svg %}
       </a></li>
-    <li><a href="https://twitter.com/_DunkleWolke" title="Twitter" target="_blank" alt="Twitter">
+    <li><a href="https://twitter.com/_DunkleWolke" title="Twitter" target="_blank" alt="Twitter @_DunkleWolke">
       {% include icons/twitter.svg %}
     </a></li>
     <li><a href="https://researchgate.net/profile/Pablo_Saavedra_Garfias" title="ResearGate" target="_blank" atl="RG">
@@ -16,7 +16,7 @@
     <li><a href="https://orcid.org/0000-0002-4596-946X" title="ORCID" target="_blank" atl="ORCID">
       {% include icons/orcid.svg %}
     </a></li>
-    <li><a href="https://instagram.com/pablo.saavedragarfias" title="Instagram" target="_blank" alt="InstG">
+    <li><a href="https://instagram.com/_dunklewolke" title="Instagram" target="_blank" alt="Instagram @_dunklewolke">
       {% include icons/instagram.svg %}
     </a></li>
     <li><a href="skype:pablo.saa?userinfo" title="Skype" alt="Skype">
