layout rearranges and page of codes with description to expand with click

--- a/_includes/mainmenu.html
+++ b/_includes/mainmenu.html
@@ -13,7 +13,7 @@
 			<li><a href="{{'codes.html'|relative_url}}" class="{% if page.url=='/codes.html' %}current{% endif %}">Code</a></li>
 			<li><a href="{{'publications.html'|relative_url}}" class="{% if page.url=='/publications.html' %}current{% endif %}">Publications</a></li>
 			<li><a href="{{'conferences.html'|relative_url}}" class="{% if page.url=='/conferences.html' %}current{% endif %}">Conferences</a></li>
-			<li><a href="{{'portfolio.html'|relative_url}}" class="{% if page.url=='/portfolio.html' %}current{% endif %}">Portfolio</a></li>
+			<!-- <li><a href="{{'portfolio.html'|relative_url}}" class="{% if page.url=='/portfolio.html' %}current{% endif %}">Portfolio</a></li> -->
 			<li><a href="{{'about.html'|relative_url}}" class="{% if page.url=='/about.html' %}current{% endif %}">About</a></li>
 		</ul>
 		<hr size="5" noshade width="80%">
