add dataset publication, fixed AGU 2022 conference participation

--- a/_includes/mainfoot.html
+++ b/_includes/mainfoot.html
@@ -26,4 +26,4 @@
       {% include icons/linkedin.svg %}
     </a></li> -->
  </ul>
-<p>Copyright 2017, Pablo Saavedra-Garfias.<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" alt="CC License"><img alt="Creative Commons License" style="border-width:0; width:88px; height:31px;" src="{{site.baseurl}}/images/icons/by-sa.svg" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+<p>Copyright 2017, Pablo Saavedra Garfias.<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" alt="CC License"><img alt="Creative Commons License" style="border-width:0; width:88px; height:31px;" src="{{site.baseurl}}/images/icons/by-sa.svg" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
