add Xinxin paper; add googlescholar; layout adjustments; add zenodo

--- a/_includes/mainfoot.html
+++ b/_includes/mainfoot.html
@@ -16,15 +16,20 @@
    <li><a href="https://twitter.com/_DunkleWolke" title="Twitter" target="_blank" alt="Twitter @_DunkleWolke">
       {% include icons/twitter.svg %}
     </a></li>
+    <li><a href="https://scholar.google.com/citations?user=FygcoNsAAAAJ&hl=en&citsig=AIIUsnMlDiPeC6Qoj7Rn_6zaTfqg" title="Google Scholar" target="_blank" atl="GS">
+      {% include icons/googlescholar.svg %}
+    </a></li>
     <li><a href="https://researchgate.net/profile/Pablo_Saavedra_Garfias" title="ResearGate" target="_blank" atl="RG">
       {% include icons/researchgate.svg %}
     </a></li>
-     <li><a href="https://instagram.com/_dunklewolke" title="Instagram" target="_blank" alt="Instagram @_dunklewolke">
+     <!-- 
+	     li><a href="https://instagram.com/_dunklewolke" title="Instagram" target="_blank" alt="Instagram @_dunklewolke">
       {% include icons/instagram.svg %}
     </a></li>
     <li><a href="skype:pablo.saa?userinfo" title="Skype" alt="Skype">
       {% include icons/skype.svg %}
-    </a></li>
+    </a></li
+     -->
     <!-- <li><a href="https://www.linkedin.com/in/pablo-saavedra-garfias-1bb47498" title="LinkedIn" target="_blank" alt="LnI">
       {% include icons/linkedin.svg %}
     </a></li> -->
