Updated IAP email, project and about description.

--- a/_includes/mainfoot.html
+++ b/_includes/mainfoot.html
@@ -1,7 +1,7 @@
 {% if page.url!='/' %}<a href="{{'/' | relative_url}}"><h2 style="float:left;">Back Home</h2></a>{% endif %}
  <ul>
    <li style="font-size:1.9em;" > Contact: </li>
-    <li><a href="mailto:pablo.saavedra@uni-leipzig.de" title="Email" alt="Email">
+    <li><a href="mailto:garfias@iap-kborn.de" title="Email" alt="Email">
       {% include icons/email.svg %}
     </a></li>
    <li><a href="https://orcid.org/0000-0002-4596-946X" title="ORCID" target="_blank" atl="ORCID">
